[package]
name = "hlua"
version = "0.1.9"
authors = [ "pierre.krieger1708@gmail.com" ]
description = "Zero-cost high-level wrapper for Lua"
repository = "https://github.com/tomaka/hlua"
documentation = "http://tomaka.github.io/hlua/hlua/index.html"
license = "MIT"

[dependencies]
libc = "0.2"

[dependencies.lua52-sys]
version = "0.0.4"
path = "../lua52-sys"
