[package]
name = "hlua"
version = "0.3.0"
authors = [ "pierre.krieger1708@gmail.com" ]
description = "Zero-cost high-level wrapper for Lua"
keywords = ["lua"]
repository = "https://github.com/tomaka/hlua"
documentation = "http://docs.rs/hlua"
license = "MIT"

[dependencies]
libc = "0.2"
lua52-sys = { version = "0.1.0", path = "../lua52-sys" }
