[package]

name = "lua52-sys"
version = "0.0.1"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Bindings for Lua 5.2"
build = "build.rs"
links = "lua52"
license = "MIT"
repository = "https://github.com/tomaka/rust-hl-lua"

[build-dependencies]
pkg-config = "*"

[dependencies]
libc = "*"
