[package]

name = "lua52-sys"
version = "0.1.2"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Bindings for Lua 5.2"
build = "build.rs"
links = "lua"
license = "MIT"
repository = "https://github.com/tomaka/rust-hl-lua"

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"

[dependencies]
libc = "0.2"
